--- a/lab_python/python12_lambda.ipynb
+++ b/lab_python/python12_lambda.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPjDkOMbV/ZBDhJdn2xNv8l",
+      "authorship_tag": "ABX9TyM/deQrBpYjwNVNOaSWa4Uo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -664,6 +664,198 @@
           },
           "metadata": {},
           "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## lambda를 아규먼트로 전달하는 예\n",
+        "\n",
+        "*   filter: 조건을 만족하는 아이템들을 찾기. `filter(function, iterable)`\n",
+        "    *   iterable 안에 있는 원소들을 하나씩 순서대로 function의 아규먼트로 전달하면서 function을 호출하고, function이 True를 리턴하는 원소들만 선택.\n",
+        "    *   function은 아규먼트가 1개이고, True/False (bool)를 리턴하는 함수.\n",
+        "        *   `lambda x: True/False를 리턴하는 식`\n",
+        "*   map: 아이템들을 일정한 규칙에 따라서 다른 값으로 변환(매핑). `map(function, iterable)`\n",
+        "    *   iterable 안에 있는 원소들을 하나씩 순서대로 function의 아규먼트로 전달하면서 function을 호출하고, function이 리턴하는 값으로 매핑 값을 만듦.\n",
+        "    *   function은 아규먼트가 1개이고, 리턴값이 있는 함수.\n",
+        "        *   `lambda x: 리턴값(식)`\n"
+      ],
+      "metadata": {
+        "id": "Y76NcIuzHUqT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "McSzj8InKtAS"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [random.randrange(100) for _ in range(10)]\n",
+        "numbers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t9JOtPjTKuNk",
+        "outputId": "4915bff5-4a00-4074-b7ed-81d22d73edcd"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[84, 20, 77, 32, 95, 17, 21, 58, 88, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers의 원소들 중에서 짝수들만 필터링\n",
+        "[x for x in numbers if x % 2 == 0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "duLLe0ENK3Wj",
+        "outputId": "482b7256-2088-43cf-e751-1ae36d52724d"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[84, 20, 32, 58, 88, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = filter(lambda x: x % 2 == 0, numbers)\n",
+        "list(result)  # filter의 결과를 list 타입으로 변환."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xs9m_iqLLM_t",
+        "outputId": "cdb34546-83a3-4d29-9f2e-6718b696df90"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[84, 20, 32, 58, 88, 10]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 홀수들만 필터링\n",
+        "result = filter(lambda x: x % 2 == 1, numbers)\n",
+        "list(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dwSTuWlNNHqs",
+        "outputId": "c202ff9f-3595-4c60-98be-907211d4e919"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[77, 95, 17, 21]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# number의 원소가 짝수이면 'even', 홀수이면 'odd'로 매핑.\n",
+        "['even' if x % 2 == 0 else 'odd' for x in numbers]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q8846qlONWhd",
+        "outputId": "78b6390e-70c7-440a-ba46-d26f708aa59d"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['even', 'even', 'odd', 'even', 'odd', 'odd', 'odd', 'even', 'even', 'even']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = map(lambda x: 'even' if x % 2 == 0 else 'odd', numbers)\n",
+        "list(result)  # map의 결과를 list 타입으로 변환."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JZpLxSvGOET1",
+        "outputId": "33ef1150-ed97-4824-9b65-b0374a484a29"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('even', 'even', 'odd', 'even', 'odd', 'odd', 'odd', 'even', 'even', 'even')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
         }
       ]
     }
