if-else expression. map.

--- a/lab_python/python12_lambda.ipynb
+++ b/lab_python/python12_lambda.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/deQrBpYjwNVNOaSWa4Uo",
+      "authorship_tag": "ABX9TyMsH/LSQOhjTGDE0t0zbvMR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -858,6 +858,203 @@
           "execution_count": 46
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "numbers의 원소가 0 ~ 19이면 'junior', 20 ~ 59이면 'senior', 60 이상이면 'veteran' 매핑."
+      ],
+      "metadata": {
+        "id": "_QUtx2p2Tzju"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = 29\n",
+        "\n",
+        "# if age < 20:\n",
+        "#     category = 'junior'\n",
+        "# elif age < 60:\n",
+        "#     category = 'senior'\n",
+        "# else:\n",
+        "#     category = 'veteran'\n",
+        "\n",
+        "if age < 20:\n",
+        "    category = 'junior'\n",
+        "else:\n",
+        "    if age < 60:\n",
+        "        category = 'senior'\n",
+        "    else:\n",
+        "        category = 'veteran'\n",
+        "\n",
+        "print(category)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6iD0paRqUJU9",
+        "outputId": "66d466f7-6a37-40c4-fef5-de778bc298de"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "senior\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = 79\n",
+        "category = 'junior' if age < 20 else ('senior' if age < 60 else 'veteran')\n",
+        "print(category)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mbrcPoiZWriI",
+        "outputId": "cb55a339-aa03-4fb1-9fb1-8b3c67c1bfc1"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "veteran\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = map(lambda x: 'junior' if x < 20 else ('senior' if x < 60 else 'veteran'), numbers)\n",
+        "list(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EEWQmZcYYiNw",
+        "outputId": "1480c751-9c53-403f-b93f-80f9ab19bb24"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['veteran',\n",
+              " 'senior',\n",
+              " 'veteran',\n",
+              " 'senior',\n",
+              " 'veteran',\n",
+              " 'junior',\n",
+              " 'senior',\n",
+              " 'senior',\n",
+              " 'veteran',\n",
+              " 'junior']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "['junior' if x < 20 else ('senior' if x < 60 else 'veteran') for x in numbers]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e9EbS5XJZcTQ",
+        "outputId": "c3c0c5be-0bf4-4292-8964-aef451826820"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['veteran',\n",
+              " 'senior',\n",
+              " 'veteran',\n",
+              " 'senior',\n",
+              " 'veteran',\n",
+              " 'junior',\n",
+              " 'senior',\n",
+              " 'senior',\n",
+              " 'veteran',\n",
+              " 'junior']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def age_to_category(age):\n",
+        "    if age < 20:\n",
+        "        category = 'junior'\n",
+        "    elif age < 60:\n",
+        "        category = 'senior'\n",
+        "    else:\n",
+        "        category = 'veteran'\n",
+        "\n",
+        "    return category"
+      ],
+      "metadata": {
+        "id": "clQ_ttxMZ-of"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = map(age_to_category, numbers)\n",
+        "print(list(result))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SFjGPbvXaauQ",
+        "outputId": "55a0b633-dd54-4bd0-e904-cccdf7d9a615"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['veteran', 'senior', 'veteran', 'senior', 'veteran', 'junior', 'senior', 'senior', 'veteran', 'junior']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "uY66n0qVaqXP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
