--- a/lab_python/python12_lambda.ipynb
+++ b/lab_python/python12_lambda.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsH/LSQOhjTGDE0t0zbvMR",
+      "authorship_tag": "ABX9TyP/z3nw20cfURF0Rn5v1IR7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1034,9 +1034,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SFjGPbvXaauQ",
-        "outputId": "55a0b633-dd54-4bd0-e904-cccdf7d9a615"
+        "outputId": "66ddd4f0-f3e5-4eec-9244-fc6c2fd3c625"
       },
-      "execution_count": 63,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -1048,13 +1048,246 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## filter 함수 구현"
+      ],
+      "metadata": {
+        "id": "WyIFfObbgdO_"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def my_filter(iterable, func):\n",
+        "    \"\"\"\n",
+        "    필터링. iterable의 원소들 중에서 func의 아규먼트로 전달했을 때\n",
+        "    func의 리턴값이 True가 되는 원소들로 이루어진 리스트를 리턴.\n",
+        "\n",
+        "    @param iterable - list 또는 tuple.\n",
+        "    @param func - 아규먼트가 1개이고 True 또는 False를 리턴하는 함수.\n",
+        "    @return 필터링 결과를 저장한 리스트(list).\n",
+        "    \"\"\"\n",
+        "\n",
+        "    result = []  # 필터링한(조건을 만족하는) 아이템들을 저장하기 위한 리스트.\n",
+        "    for x in iterable:  # iterable의 원소들을 처음부터 끝까지 순서대로 반복.\n",
+        "        if func(x):  # iterable의 원소를 func의 아규먼트로 전달했을 때 리턴값이 True이면\n",
+        "            result.append(x)\n",
+        "    # result = [x for x in iterable if func(x)]\n",
+        "\n",
+        "    return result"
+      ],
       "metadata": {
         "id": "uY66n0qVaqXP"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [random.randrange(-10, 11) for _ in range(10)]\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e6exNTD5jAbq",
+        "outputId": "fbc1694c-d502-45e7-a58e-ae3dbbed7678"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[6, 3, 5, -2, -8, -4, 7, -2, 3, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers에서 짝수들만 필터링\n",
+        "my_filter(numbers, lambda x: x % 2 == 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QnqETRtkjuQZ",
+        "outputId": "43191935-ad6b-4474-fdda-a73fdba9f5b6"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[6, -2, -8, -4, -2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers에서 양수들만 필터링\n",
+        "my_filter(numbers, lambda x: x > 0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4S33KqZ8kJtJ",
+        "outputId": "11e4f864-8dac-4b3d-98f2-8baebe363831"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[6, 3, 5, 7, 3, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = ['SQL', 'Python', 'R', 'JavaScript']\n",
+        "\n",
+        "# languages에서 5글자 이상인 문자열들만 필터링\n",
+        "my_filter(languages, lambda x: len(x) >= 5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NSOsz2oClDFK",
+        "outputId": "4e1b1d60-06b5-4408-aa76-dd5309478fcb"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Python', 'JavaScript']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## map 함수 구현"
+      ],
+      "metadata": {
+        "id": "hbiq6ZSGmRyJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_map(iterable, func):\n",
+        "    \"\"\"\n",
+        "    매핑. iterable의 원소를 func의 아규먼트로 전달해서 호출했을 때 그 리턴값으로 매핑.\n",
+        "\n",
+        "    @param iterable - list 또는 tuple.\n",
+        "    @param func - 아규먼트가 1개이고, 리턴값이 있는 함수.\n",
+        "    @return 매핑된 값들을 갖는 리스트(list).\n",
+        "    \"\"\"\n",
+        "    # result = []\n",
+        "    # for x in iterable:\n",
+        "    #     result.append(func(x))\n",
+        "    result = [func(x) for x in iterable]\n",
+        "\n",
+        "    return result"
+      ],
+      "metadata": {
+        "id": "fVApMY48lmNT"
+      },
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [random.randrange(10) for _ in range(10)]\n",
+        "print(numbers)\n",
+        "\n",
+        "# numbers의 원소가 짝수이면 'even', 홀수이면 'odd'로 매핑.\n",
+        "my_map(numbers, lambda x: 'odd' if x % 2 else 'even')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SssJOcL-pEJM",
+        "outputId": "25a5f6bc-3704-4f93-bdef-801914a4587c"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 5, 0, 4, 1, 9, 5, 0, 7, 7]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['even', 'odd', 'even', 'even', 'odd', 'odd', 'odd', 'even', 'odd', 'odd']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "languages = ['SQL', 'Python', 'R', 'JavaScript', 'Java']\n",
+        "\n",
+        "# languages의 문자열을 그 문자열의 길이로 매핑.\n",
+        "my_map(languages, lambda x: len(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vM-70H0kp5yr",
+        "outputId": "d75c626f-dce8-4b93-831e-fcad88a55629"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 6, 1, 10, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
     }
   ]
 }
