객체 지향 프로그래밍

--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOCh+JQ9CIMnYEMumDeAi0F",
+      "authorship_tag": "ABX9TyOOKH7kRUmtdMj4o+FuAiSC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,9 +163,156 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# 아규먼트 student가 create_student() 함수에 의해서 만들어진 dict일 때 세 과목의 총점을 리턴.\n",
+        "def get_total(student):\n",
+        "    return student['korean'] + student['english'] + student['math']"
+      ],
       "metadata": {
         "id": "EVipaeHLl7BK"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 아규먼트 student가 create_student() 함수에 의해서 만들어진 dict일 때 세 과목의 평균을 리턴.\n",
+        "def get_mean(student):\n",
+        "    return get_total(student) / 3"
+      ],
+      "metadata": {
+        "id": "Gjjk-MDEq_wT"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for s in students:\n",
+        "    total = get_total(s)\n",
+        "    mean = get_mean(s)\n",
+        "    print(f'번호={s['id']}, 이름={s['name']}, 총점={total}, 평균={mean}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8R0hATdxrl2b",
+        "outputId": "579dd4df-cb02-4652-b2c2-89e0c50c4920"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "번호=1, 이름=홍길동, 총점=285, 평균=95.0\n",
+            "번호=2, 이름=오쌤, 총점=220, 평균=73.33333333333333\n",
+            "번호=3, 이름=Scott, 총점=275, 평균=91.66666666666667\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`get_total()` 함수와 `get_mean()` 함수는 학생 객체(dict)의 데이터와 매우 밀접한 관계를 가지고 있음.\n",
+        "\n",
+        "데이터(국어, 영어, 수학 점수, ...)와 기능(총점 계산, 평균 계산, ...)이 매우 밀접하게 연결되어 있음.\n",
+        "\n",
+        "데이터와 기능을 하나의 **타입**으로 묶을 수는 없을까?"
+      ],
+      "metadata": {
+        "id": "qcuD4FY_slPJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 객체 지향 프로그래밍(OOP: Object-Oriented Programming)\n",
+        "\n",
+        "*   **객체(object)**: 데이터(속성)와 기능을 가지고 있는 대상.\n",
+        "*   **클래스(class)**: 객체를 만들기 위한 설계도(코드).\n",
+        "    *   속성(property): 객체가 가져야하는 값(들), 변수(들).\n",
+        "    *   기능(method): 클래스 안에서 선언하는 함수(function).\n",
+        "        *   메서드를 선언할 때 항상 첫번째 파라미터는 `self`.\n",
+        "*   **인스턴스(instance)**: 메모리에 생성된 객체.\n",
+        "*   **생성자(constructor)**: 클래스 이름과 동일한 특별한 함수. 객체를 생성해 주는 함수.\n",
+        "    *   파이썬에서는 생성자를 호출하면 클래스에서 선언된 `__init__()` 메스드가 자동으로 호출됨.\n"
+      ],
+      "metadata": {
+        "id": "9pODNdKUtakr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    # 생성자 함수 - 객체 초기화\n",
+        "    def __init__(self, id, name, korean, english, math):\n",
+        "        self.id = id\n",
+        "        self.name = name\n",
+        "        self.korean = korean\n",
+        "        self.english = english\n",
+        "        self.math = math\n",
+        "\n",
+        "    # 메서드(method)\n",
+        "    # 학생 객체가 가지고 있는 세 과목의 총점을 리턴하는 메서드.\n",
+        "    def get_total(self):\n",
+        "        return self.korean + self.english + self.math\n",
+        "\n",
+        "    # 학생 객체가 가지고 있는 세 과목의 평균을 리턴하는 메서드.\n",
+        "    def get_mean(self):\n",
+        "        return self.get_total() / 3"
+      ],
+      "metadata": {
+        "id": "8zrVwAZEsM8M"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Student 클래스의 생성자를 호출해서 객체를 생성.\n",
+        "student1 = Student(1, '홍길동', 99, 85, 96)\n",
+        "print(student1)\n",
+        "print(student1.id)\n",
+        "print(student1.name)\n",
+        "print(student1.korean)\n",
+        "print(student1.english)\n",
+        "print(student1.math)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8_EX1zVXzM1m",
+        "outputId": "c4e277e0-7080-43fe-9449-e0e6c05bf672"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Student object at 0x79eb1b768740>\n",
+            "1\n",
+            "홍길동\n",
+            "99\n",
+            "85\n",
+            "96\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aePphucB0mV-"
       },
       "execution_count": null,
       "outputs": []
