객체 지향 프로그래밍

--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOOKH7kRUmtdMj4o+FuAiSC",
+      "authorship_tag": "ABX9TyOwr/nSSp4U4C7IEXaGgNti",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,7 +235,7 @@
         "\n",
         "*   **객체(object)**: 데이터(속성)와 기능을 가지고 있는 대상.\n",
         "*   **클래스(class)**: 객체를 만들기 위한 설계도(코드).\n",
-        "    *   속성(property): 객체가 가져야하는 값(들), 변수(들).\n",
+        "    *   속성(attribute): 객체가 가져야하는 값(들), 변수(들).\n",
         "    *   기능(method): 클래스 안에서 선언하는 함수(function).\n",
         "        *   메서드를 선언할 때 항상 첫번째 파라미터는 `self`.\n",
         "*   **인스턴스(instance)**: 메모리에 생성된 객체.\n",
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "8zrVwAZEsM8M"
       },
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -278,44 +278,77 @@
       "source": [
         "# Student 클래스의 생성자를 호출해서 객체를 생성.\n",
         "student1 = Student(1, '홍길동', 99, 85, 96)\n",
-        "print(student1)\n",
-        "print(student1.id)\n",
+        "print(student1)  # 객체 출력\n",
+        "print(student1.id)  # 객체 속성 출력\n",
         "print(student1.name)\n",
         "print(student1.korean)\n",
         "print(student1.english)\n",
-        "print(student1.math)"
+        "print(student1.math)\n",
+        "print(student1.get_total())  # 객체 메서드 호출\n",
+        "print(student1.get_mean())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8_EX1zVXzM1m",
-        "outputId": "c4e277e0-7080-43fe-9449-e0e6c05bf672"
+        "outputId": "67346af2-003a-4a40-c65f-e39346de2e2b"
       },
-      "execution_count": 16,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<__main__.Student object at 0x79eb1b768740>\n",
+            "<__main__.Student object at 0x79eb1b2b2ff0>\n",
             "1\n",
             "홍길동\n",
             "99\n",
             "85\n",
-            "96\n"
+            "96\n",
+            "280\n",
+            "93.33333333333333\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "student2 = Student(2, '오쌤', 90, 80, 70)\n",
+        "print(student2)\n",
+        "print(student2.id)\n",
+        "print(student2.name)\n",
+        "print(student2.korean)\n",
+        "print(student2.english)\n",
+        "print(student2.math)\n",
+        "print(student2.get_total())\n",
+        "print(student2.get_mean())"
+      ],
       "metadata": {
-        "id": "aePphucB0mV-"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aePphucB0mV-",
+        "outputId": "4b0f6e05-9767-4ac3-ae67-a7409bf91cc7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Student object at 0x79eb1b2b17f0>\n",
+            "2\n",
+            "오쌤\n",
+            "90\n",
+            "80\n",
+            "70\n",
+            "240\n",
+            "80.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
