class 선언과 객체 생성

--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOwr/nSSp4U4C7IEXaGgNti",
+      "authorship_tag": "ABX9TyN7T8wsYF3L++CWet4JmPrC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -346,6 +346,192 @@
             "70\n",
             "240\n",
             "80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Student 타입 객체들을 저장하는 리스트(list)\n",
+        "students = [\n",
+        "    Student(1, '홍길동', 100, 100, 100),\n",
+        "    Student(2, '오쌤', 90, 80, 88),\n",
+        "    Student(3, 'Scott', 80, 100, 90)\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "x-GVJOKgWh-T"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yGh_2miDXGl8",
+        "outputId": "c7dbc695-528e-4566-accb-9ee02a0ca1a7"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[<__main__.Student at 0x79eb1b2b1f10>,\n",
+              " <__main__.Student at 0x79eb1b2b3e00>,\n",
+              " <__main__.Student at 0x79eb1b2b39b0>]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for s in students:\n",
+        "    print(f'번호={s.id}, 이름={s.name}, 총점={s.get_total()}, 평균={s.get_mean()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nXWndP_jXInT",
+        "outputId": "4e9f4a24-74b4-4238-f428-136816edcb82"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "번호=1, 이름=홍길동, 총점=300, 평균=100.0\n",
+            "번호=2, 이름=오쌤, 총점=258, 평균=86.0\n",
+            "번호=3, 이름=Scott, 총점=270, 평균=90.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Naming conventing(이름 관습)\n",
+        "\n",
+        "*   변수, 함수 이름: 소문자(또는 숫자)로 이루어진 snake 표기법\n",
+        "    *   (예) student, get_total(), ...\n",
+        "*   클래스 이름: 첫글자를 대문자로 하는 camel 표기법\n",
+        "    *   (예) Student, DataFrame, DecisionTree, ...\n"
+      ],
+      "metadata": {
+        "id": "UIN0WZ3uXu-j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 클래스 작성 연습"
+      ],
+      "metadata": {
+        "id": "OlHEeCm4YyZz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex. 1\n",
+        "\n",
+        "원(Cirlce) 클래스\n",
+        "\n",
+        "*   속성(attribute): 반지름(radius)\n",
+        "*   기능(method): 넓이 계산(area), 둘레 길이 계산(perimeter)\n"
+      ],
+      "metadata": {
+        "id": "9ExVh3DuY1VE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Circle:\n",
+        "    def __init__(self, radius):\n",
+        "        self.radius = radius\n",
+        "\n",
+        "    def area(self):\n",
+        "        return 3.14 * self.radius ** 2\n",
+        "\n",
+        "    def perimeter(self):\n",
+        "        return 2 * 3.14 * self.radius"
+      ],
+      "metadata": {
+        "id": "Lhk5KiI3XlEt"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c1 = Circle(1)  # 생성자 호출 -> 객체 생성\n",
+        "print(c1)\n",
+        "print(c1.radius)  # 생성된 객체(인스턴스)의 속성(변수) 값을 읽어옴.\n",
+        "print(c1.area())  # 생성된 객체(인스턴스)에서 메서드를 호출(기능을 호출).\n",
+        "print(c1.perimeter())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QKMBe8HFa3GN",
+        "outputId": "26abe538-e14e-4dc6-ca81-836b6f3a9e2b"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Circle object at 0x79eb2b5ec470>\n",
+            "1\n",
+            "3.14\n",
+            "6.28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c2 = Circle(10)\n",
+        "print(c2)\n",
+        "print(c2.radius)\n",
+        "print(c2.area())\n",
+        "print(c2.perimeter())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0eDzujJCcVuk",
+        "outputId": "49ef30ca-046c-4be1-e4f2-0f451f4731a1"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Circle object at 0x79eb1b2b1e80>\n",
+            "10\n",
+            "314.0\n",
+            "62.800000000000004\n"
           ]
         }
       ]
