클래스 작성 & 사용 연습

--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN7T8wsYF3L++CWet4JmPrC",
+      "authorship_tag": "ABX9TyOyPdNz4XRT4QoXkzLtRg2F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -451,7 +451,7 @@
         "원(Cirlce) 클래스\n",
         "\n",
         "*   속성(attribute): 반지름(radius)\n",
-        "*   기능(method): 넓이 계산(area), 둘레 길이 계산(perimeter)\n"
+        "*   기능(method): 넓이 계산(area), 둘레길이 계산(perimeter)\n"
       ],
       "metadata": {
         "id": "9ExVh3DuY1VE"
@@ -532,6 +532,129 @@
             "10\n",
             "314.0\n",
             "62.800000000000004\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex. 2\n",
+        "\n",
+        "직사각형(Rectangle) 클래스\n",
+        "\n",
+        "*   속성: width(가로길이), height(세로길이)\n",
+        "*   기능:\n",
+        "    *   area: 직사각형 객체의 넓이 리턴.\n",
+        "    *   perimeter: 직사각형 객체의 둘레길이 리턴.\n",
+        "    *   resize: 직사각형 객체의 가로길이와 세로길이를 변경."
+      ],
+      "metadata": {
+        "id": "s4F4-LWDhr04"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Rectangle:\n",
+        "    def __init__(self, width, height):\n",
+        "        # 객체 변수 = 값  --> 초기화(initialization)\n",
+        "        self.width = width\n",
+        "        self.height = height\n",
+        "\n",
+        "    def area(self):\n",
+        "        return self.width * self.height\n",
+        "\n",
+        "    def perimeter(self):\n",
+        "        return (self.width + self.height) * 2\n",
+        "\n",
+        "    def resize(self, new_width, new_height):\n",
+        "        self.width = new_width\n",
+        "        self.height = new_height"
+      ],
+      "metadata": {
+        "id": "I_DTsgkXjL9-"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 가로길이 4, 세로길이 3인 직사각형 객체 생성\n",
+        "rect1 = Rectangle(width=4, height=3)  # 생성자 호출 --> __init__() 메서드 호출 --> 객체 생성\n",
+        "print(rect1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XJJqoNIAqn-P",
+        "outputId": "230ec69d-c93f-48b1-e6e2-d19644d96ccc"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<__main__.Rectangle object at 0x79eb1b2abc20>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(rect1.width)  # rect1 객체의 가로길이 속성\n",
+        "print(rect1.height)\n",
+        "print(rect1.area())  # rect1 객체에서 넓이를 리턴하는 메서드를 호출\n",
+        "print(rect1.perimeter())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-DQEybvHrH0J",
+        "outputId": "ec28fbb6-4c98-4037-f604-88286459902e"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "3\n",
+            "12\n",
+            "14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# rect1 직사각형 객체의 가로길이를 16, 세로길이를 4로 변경.\n",
+        "rect1.resize(16, 4)\n",
+        "print(rect1.area())  # 직사각형 크기 변경 후 넓이 = 16 * 4 = 64\n",
+        "print(rect1.perimeter())  # 직사각형 크기 변경 후 둘레길이 = (16 + 4) * 2 = 40"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XIz5tNPRr3GI",
+        "outputId": "5fc32d43-10a4-4e06-841f-ce606aaf5ac5"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "64\n",
+            "40\n"
           ]
         }
       ]
