--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOyPdNz4XRT4QoXkzLtRg2F",
+      "authorship_tag": "ABX9TyO2CF3uI9HYQhoOiJb2dkY5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -658,6 +658,81 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rect2 = Rectangle(2, 2)\n",
+        "print(f'rect2: 가로={rect2.width}, 세로={rect2.height}, 넓이={rect2.area()}, 둘레={rect2.perimeter()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yctrxTXFyY5y",
+        "outputId": "3fcfa897-9555-4f3a-f891-3eb7470d5091"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rect2: 가로=2, 세로=2, 넓이=4, 둘레=8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rect2.resize(2, 4)\n",
+        "print(f'rect2: 가로={rect2.width}, 세로={rect2.height}, 넓이={rect2.area()}, 둘레={rect2.perimeter()}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "htyBhddty6yB",
+        "outputId": "e67915da-7592-428b-9aa4-5a4df2d9b93c"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rect2: 가로=2, 세로=4, 넓이=8, 둘레=12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex. 3\n",
+        "\n",
+        "점(Point) 클래스: 2차원 평면의 한 점의 좌표를 표현하는 객체.\n",
+        "\n",
+        "*   속성\n",
+        "    *   x: x 좌표. 기본값은 0.\n",
+        "    *   y: y 좌표. 기본값은 0.\n",
+        "*   기능\n",
+        "    *   move: 이동. 점의 위치를 원래 위치에서 x축 방향으로 dx만큼, y축 방향으로 dy만큼 이동.\n",
+        "    *   distance: 두 점 간의 거리를 리턴. `((x1 - x2) ** 2 + (y1 - y2) ** 2) ** 0.5`\n"
+      ],
+      "metadata": {
+        "id": "kfpO-HQe2zIS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gZsYal8RzKdS"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
