--- a/lab_python/python13_oop.ipynb
+++ b/lab_python/python13_oop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO2CF3uI9HYQhoOiJb2dkY5",
+      "authorship_tag": "ABX9TyM9AabmdfT1xpDyR2tjP7Z5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -727,12 +727,160 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class Point:\n",
+        "    \"\"\"2차원 평면에서 한 점의 좌표 (x, y)를 표현하는 클래스.\"\"\"\n",
+        "\n",
+        "    def __init__(self, x=0, y=0):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
+        "\n",
+        "    def move(self, dx, dy):\n",
+        "        \"\"\"점의 위치를 x축의 방향으로 dx만큼, y축의 방향으로 dy만큼 이동.\"\"\"\n",
+        "        self.x += dx  # self.x = self.x + dx\n",
+        "        self.y += dy\n",
+        "\n",
+        "    # def distance(self, x, y):\n",
+        "    #     return ((self.x - x) ** 2 + (self.y - y) ** 2) ** 0.5\n",
+        "\n",
+        "    def distance(self, other):\n",
+        "        \"\"\"\n",
+        "        현재 점(self)과 다른 점(other) 사이의 거리를 리턴.\n",
+        "\n",
+        "        @param other - Point 타입 객체.\n",
+        "        @return self와 other 사이의 거리.\n",
+        "        \"\"\"\n",
+        "        return ((self.x - other.x) ** 2 + (self.y - other.y) ** 2) ** 0.5"
+      ],
       "metadata": {
         "id": "gZsYal8RzKdS"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt1 = Point()\n",
+        "print(f'pt1: x={pt1.x}, y={pt1.y}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wXXuRzAuCeEN",
+        "outputId": "b796baa4-65b6-4306-e18b-33f2a625afb3"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pt1: x=0, y=0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt1.move(1, -2)\n",
+        "print(f'pt1: x={pt1.x}, y={pt1.y}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ywbn8fVeC94G",
+        "outputId": "e1b6c5f3-717a-472b-9ea2-b766ef57ccd0"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pt1: x=1, y=-2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt2 = Point(x=2, y=1)\n",
+        "print(f'pt2: x={pt2.x}, y={pt2.y}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8fGHNJw5DSPe",
+        "outputId": "7bf08e4d-bdb4-4dc6-bfa9-07c4925a7315"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pt2: x=2, y=1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt1.distance(pt2)  # Point pt1과 Point pt2 사이의 거리"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pcHRqrSQDucu",
+        "outputId": "b265794f-65c6-4bfe-ae8a-2907b80e70d1"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.1622776601683795"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pt2.distance(pt1)  # pt2에서 pt1까지의 거리."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ab7PK8UqGTU1",
+        "outputId": "a3fe046b-5730-424e-b2d4-caea011a3b0b"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.1622776601683795"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     }
   ]
 }
